--- a/2023-1/beamer/C08_md1.tex
+++ b/2023-1/beamer/C08_md1.tex
@@ -24,10 +24,10 @@
 \usetikzlibrary{arrows}
 \usetikzlibrary{matrix}
 \tikzset{
-	every picture/.append style={
-		execute at begin picture={\deactivatequoting},
-		execute at end picture={\activatequoting}
-	}
+    every picture/.append style={
+        execute at begin picture={\deactivatequoting},
+        execute at end picture={\activatequoting}
+    }
 }
 \usetikzlibrary{decorations.pathreplacing,angles,quotes}
 \usetikzlibrary{shapes.geometric}
@@ -38,9 +38,9 @@
 \usepackage{tkz-graph}
 \usepackage{polynom}
 \polyset{%
-	style=B,
-	delims={(}{)},
-	div=:
+    style=B,
+    delims={(}{)},
+    div=:
 }
 \renewcommand\labelitemi{$\circ$}
 \setlist[enumerate]{label={(\arabic*)}}
@@ -97,253 +97,373 @@
 \title[Clase 8 - Conteo 4]{Matemática Discreta I \\ Clase 8 - Conteo ($4^\circ$ parte)}
 %\author[C. Olmos / A. Tiraboschi]{Carlos Olmos / Alejandro Tiraboschi}
 \institute[]{\normalsize FAMAF / UNC
-	\\[\baselineskip] ${}^{}$
-	\\[\baselineskip]
+    \\[\baselineskip] ${}^{}$
+    \\[\baselineskip]
 }
 \date[13/04/2023]{13 de abril  de 2023}
 
 
 
 \begin{document}
-	
-	\frame{\titlepage} 
-	
-	
-	\begin{frame}\frametitle{El teorema del binomio}
-		En álgebra elemental aprendemos las fórmulas
-		$$
-		(a+b)^2 = a^2 +2ab +b^2, \qquad (a+b)^3 = a^3 + 3 a^2b +3ab^2 +
-		b^3.
-		$$
-		\vskip .4cm\pause
-		A veces nos piden desarrollar la formula para $(a+b)^4$ y
-		potencias mayores de $a+b$. 
-		\vskip .4cm\pause
-		El resultado general que da una formula para $(a+b)^n$ es conocido como el
-		{\it {teorema del binomio}} o {\it binomio de Newton}.  
-		\vskip .4cm
-	\end{frame}
-	
-	
-	\begin{frame}\frametitle{El teorema del binomio}
-		
-		
-		{\color{blue} Teorema}
-		\vskip .2cm
-		{\it
-			Sea $n$ un entero positivo. El coeficiente del termino
-			$a^{n-r}b^r$ en el desarrollo de $(a+b)^n$ es el número binomial
-			$\binom{n}{r}$.\pause Explícitamente, tenemos
-			$$
-			(a+b)^n= \binom{n}{0} a^n + \binom{n}{1} a^{n-1}b+ \binom{n}{2}
-			a^{n-2}b^2 + \cdots + \binom{n}{n} b^n.$$
-		}
-		\vskip .2cm		\pause
-		Escrito de otra forma:
-		\vskip .2cm	
-		Si $n >0$, 
-		\begin{equation*}
-			(a+b)^n= \sum_{i=0}^n \binom{n}{i} 	a^{n-i}b^i.
-		\end{equation*}
-		
-	\end{frame}
-	
-	
-	\begin{frame}
-		
-		
-		{\color{blue}Observación}
-		\vskip .2cm
-		Los coeficientes binomiales que intervienen en la fórmula de $(a+b)^n$ forman una fila del triángulo de Pascal:\pause
-		\begin{align*}
-			&\binom{n}{0}&&\binom{n}{1}& \binom{n}{2} && &\cdots && &\binom{n}{n-2}&&&\binom{n}{n-1}&&\binom{n}{n}& && 
-		\end{align*}
-		
-		\vskip .4cm\pause
-		{\color{blue}Ejemplo}
-		\begin{align*}
-			(a+ b)^4 &= \binom{4}{0} a^4 + \binom{4}{1} a^{3}b+ \binom{4}{2} a^{2}b^2 + \binom{4}{3} ab^3 + \binom{4}{4} b^4 \\
-			&{}\\
-			&=  a^4 \;+\; 4 a^{3}b\;+\; 6 a^{2}b^2\; +\; 4 ab^3 \;+\; b^4.
-		\end{align*}
-	\end{frame}
-	
-	
-	\begin{frame}
-		El teorema del binomio puede usarse para deducir identidades en
-		que estén involucrados los números binomiales.\pause
-		
-		\vskip .4cm
-		{\color{blue}Ejemplo}
-		\vskip .2cm
-		Probemos que
-		\begin{equation*}
-			\binom{n}{0}+\binom{n}{1}+\binom{n}{2}+\cdots+\binom{n}{n}= 2^n.
-		\end{equation*}
-		
-		\vskip .2cm\pause 
-		{\color{blue}Demostración.}\pause
-		
-		\vskip .2cm
-		Observemos que $2^n = (1 + 1)^n$. Por el  teorema del binomio sabemos que 
-		\begin{align*}
-			(1+1)^n &= \binom{n}{0} 1^n + \binom{n}{1} 1^{n-1}1+ \binom{n}{2}
-			1^{n-2}1^2 + \cdots + \binom{n}{n} 1^n \\
-			&= \binom{n}{0}  + \binom{n}{1} + \binom{n}{2}+ \cdots + \binom{n}{n}. \qed
-		\end{align*}
-		
-	\end{frame}
-	
-	
-	\begin{frame}
-		{\color{blue}Observación}
-		\vskip .2cm
-		La fórmula 
-		\begin{equation*}
-			\binom{n}{0}+\binom{n}{1}+\binom{n}{2}+\cdots+\binom{n}{n}= 2^n. \tag{$*$}
-		\end{equation*}
-		tiene una interpretación combinatoria: nos permite calcular nuevamente la cantidad de subconjuntos de un conjuntos de $n$ elementos. 
-		\pause
-		\vskip .2cm 
-		
-		{\color{blue}1.} Es claro  que la cantidad de subconjuntos de $k$ elementos de un conjunto de $n$ elementos es $\binom{n}{k}$. 
-		
-		\vskip .2cm 
-		\pause
-		{\color{blue}2.} Los subconjuntos de un conjunto son los subconjuntos de 0  elementos, unión los subconjuntos de $1$ elemento, unión los subconjuntos de $2$ elementos, unión los subconjuntos de $3$ elementos, etc.
-		
-		\vskip .2cm 
-		\pause
-		{\color{blue}3 .} Por  el principio de adición y la fórmula $(*)$ obtenemos  que la cantidad de subconjuntos de un conjuntos de $n$ elementos es $2^n$.
-		
-		
-	\end{frame}
-	
-	
-	\begin{frame}\frametitle{Ejercicios de conteo}
-		{\color{blue}Ejercicio}
-		\vskip .2cm
-		¿Cuántos números naturales existen menores que $10^5$, cuyos dígitos sean todos distintos?
-		\vskip .2cm \pause
-		{\color{blue}Solución.}\pause
-		\vskip .2cm
-		Los números naturales menores de $10^5$ son todos aquellos que tienen como máximo 5 dígitos.
-		\pause
-		\begin{enumerate}
-			\item[1.] 1 dígito $\to$ $9$ posibilidades,
-			\item[2.] 2 dígitos $\to$ $9 \times 9$ posibilidades (81),
-			\item[3.] 3 dígitos $\to$ $9 \times 9 \times 8$ posibilidades (648),
-			\item[4.] 4 dígitos $\to$ $9 \times 9 \times  8\times 7$ posibilidades (4536),
-			\item[5.] 5 dígitos $\to$ $9 \times 9 \times  8\times  7\times 6$ posibilidades (27216),
-		\end{enumerate} 
-		\vskip .2cm
-		\textbf{Total:} $9 +81+ 648+4536+27216 = 32490$.\qed
-	\end{frame}
-	
-	
-	\begin{frame}
-		
-		
-		{\color{blue}Ejercicio}
-		\vskip .2cm
-		Extrayendo 5 cartas de una baraja de 40 cartas ¿cuántos resultados diferentes pueden obtenerse? (no importa el orden)
-		\vskip .2cm \pause
-		{\color{blue}Solución.}\pause
-		\vskip .2cm
-		Las cuarenta caretas son diferentes y no nos importa el orden en que recibimos las cartas. 
-		\vskip .2cm
-		El problema es entonces elegir 5 entre 40, por lo tanto la respuesta es
-		\begin{equation*}
-			\binom{40}{5}.
-		\end{equation*}
-        \qed
-		\vskip 2cm
-		
-	\end{frame}
-	
-	\begin{frame}
-		
-		{\color{blue}Ejercicio}
-		\vskip .2cm
-		¿De cuántas formas diferen 		distintas (etiquetadas) de forma que cada urna contenga una bola? Es decir en  cada urna una bola.
-		\vskip .2cm \pause
-		{\color{blue}Solución.}
-		\vskip .2cm
-		Primero nos preguntamos ¿de cuántas forma puedo poner las 5 bolas blancas en  las 10 urnas? 
-		\vskip .3cm
-		Este problema es equivalente a elegir 5 urnas entre 10 (las urnas donde pondremos las bolas blancas) y sabemos que las posibilidades son $\binom{10}{5}$.
-		\vskip .3cm
-		Ahora quedan 5 lugares y  queremos ver de cuántas formas ponemos 3 bolas rojas en 5 urnas y la respuesta es $\binom{5}{3}$ 
-		\vskip 1cm
-		
-	\end{frame}
-	
-	\begin{frame}
-		
-		Finalmente,  hay dos lugares para las dos bolas negras y hay una sola forma de ponerlas.
-		\vskip .2cm
-		El resultado es entonces
-		
-		\begin{equation*}
-			\binom{10}{5}\binom{5}{3} = \frac{10!}{5!5!}\frac{5!}{2!3!} = \frac{10!}{5!2!3!} .
-		\end{equation*}\qed
-		
-        {\color{blue}Observación} Este problema es equivalente a ``cuantas permutaciones de 5 blancas, 3 rojas y 2 negras''. Como resolvíamos problemas similares, podemos pensar primero que toda las bolas tienen distinto color,  con lo cual tenemos $10!$ permutaciones.
+    
+    \frame{\titlepage} 
+    
+    
+    \begin{frame}\frametitle{El teorema del binomio}
+        En álgebra elemental aprendemos las fórmulas
+        $$
+        (a+b)^2 = a^2 +2ab +b^2, \qquad (a+b)^3 = a^3 + 3 a^2b +3ab^2 +
+        b^3.
+        $$
+        \vskip .4cm\pause
+        A veces nos piden desarrollar la formula para $(a+b)^4$ y
+        potencias mayores de $a+b$. 
+        \vskip .4cm\pause
+        El resultado general que da una formula para $(a+b)^n$ es conocido como el
+        {\it {teorema del binomio}} o {\it binomio de Newton}.  
+        \vskip .4cm
+    \end{frame}
+    
+    
+    \begin{frame}\frametitle{El teorema del binomio}
+        
+        
+        {\color{blue} Teorema}
         \vskip .2cm
-        Luego,  hay que dividir por las permutaciones de dos bolas blancas, 3 rojas  y 2 negras, y el resultado es
+        {\it
+            Sea $n$ un entero positivo. El coeficiente del termino
+            $a^{n-r}b^r$ en el desarrollo de $(a+b)^n$ es el número binomial
+            $\binom{n}{r}$.\pause Explícitamente, tenemos
+            $$
+            (a+b)^n= \binom{n}{0} a^n + \binom{n}{1} a^{n-1}b+ \binom{n}{2}
+            a^{n-2}b^2 + \cdots + \binom{n}{n} b^n.$$
+        }
+        \vskip .2cm        \pause
+        Escrito de otra forma:
+        \vskip .2cm    
+        Si $n >0$, 
+        \begin{equation*}
+            (a+b)^n= \sum_{i=0}^n \binom{n}{i}     a^{n-i}b^i.
+        \end{equation*}
+        
+    \end{frame}
+    
+    
+    \begin{frame}
+        
+        
+        {\color{blue}Observación}
+        \vskip .2cm
+        Los coeficientes binomiales que intervienen en la fórmula de $(a+b)^n$ forman una fila del triángulo de Pascal:\pause
+        \begin{align*}
+            &\binom{n}{0}&&\binom{n}{1}& \binom{n}{2} && &\cdots && &\binom{n}{n-2}&&&\binom{n}{n-1}&&\binom{n}{n}& && 
+        \end{align*}
+        
+        \vskip .4cm\pause
+        {\color{blue}Ejemplo}
+        \begin{align*}
+            (a+ b)^4 &= \binom{4}{0} a^4 + \binom{4}{1} a^{3}b+ \binom{4}{2} a^{2}b^2 + \binom{4}{3} ab^3 + \binom{4}{4} b^4 \\
+            &{}\\
+            &=  a^4 \;+\; 4 a^{3}b\;+\; 6 a^{2}b^2\; +\; 4 ab^3 \;+\; b^4.
+        \end{align*}
+    \end{frame}
+    
+    
+    \begin{frame}
+        El teorema del binomio puede usarse para deducir identidades en
+        que estén involucrados los números binomiales.\pause
+        
+        \vskip .4cm
+        {\color{blue}Ejemplo}
+        \vskip .2cm
+        Probemos que
+        \begin{equation*}
+            \binom{n}{0}+\binom{n}{1}+\binom{n}{2}+\cdots+\binom{n}{n}= 2^n.
+        \end{equation*}
+        
+        \vskip .2cm\pause 
+        {\color{blue}Demostración.}\pause
+        
+        \vskip .2cm
+        Observemos que $2^n = (1 + 1)^n$. Por el  teorema del binomio sabemos que 
+        \begin{align*}
+            (1+1)^n &= \binom{n}{0} 1^n + \binom{n}{1} 1^{n-1}1+ \binom{n}{2}
+            1^{n-2}1^2 + \cdots + \binom{n}{n} 1^n \\
+            &= \binom{n}{0}  + \binom{n}{1} + \binom{n}{2}+ \cdots + \binom{n}{n}. \qed
+        \end{align*}
+        
+    \end{frame}
+    
+    
+    \begin{frame}
+        {\color{blue}Observación}
+        \vskip .2cm
+        La fórmula 
+        \begin{equation*}
+            \binom{n}{0}+\binom{n}{1}+\binom{n}{2}+\cdots+\binom{n}{n}= 2^n. \tag{$*$}
+        \end{equation*}
+        tiene una interpretación combinatoria: nos permite calcular nuevamente la cantidad de subconjuntos de un conjuntos de $n$ elementos. 
+        \pause
+        \vskip .2cm 
+        
+        {\color{blue}1.} Es claro  que la cantidad de subconjuntos de $k$ elementos de un conjunto de $n$ elementos es $\binom{n}{k}$. 
+        
+        \vskip .2cm 
+        \pause
+        {\color{blue}2.} Los subconjuntos de un conjunto son los subconjuntos de 0  elementos, unión los subconjuntos de $1$ elemento, unión los subconjuntos de $2$ elementos, unión los subconjuntos de $3$ elementos, etc.
+        
+        \vskip .2cm 
+        \pause
+        {\color{blue}3 .} Por  el principio de adición y la fórmula $(*)$ obtenemos  que la cantidad de subconjuntos de un conjuntos de $n$ elementos es $2^n$.
+        
+        
+    \end{frame}
+    
+    
+    \begin{frame}\frametitle{Ejercicios de conteo}
+        {\color{blue}Ejercicio}
+        \vskip .2cm
+        ¿Cuántos números naturales existen menores que $10^5$, cuyos dígitos sean todos distintos?
+        \vskip .2cm \pause
+        {\color{blue}Solución.}\pause
+        \vskip .2cm
+        Los números naturales menores de $10^5$ son todos aquellos que tienen como máximo 5 dígitos.
+        \pause
+        \begin{enumerate}
+            \item[1.] 1 dígito $\to$ $9$ posibilidades,
+            \item[2.] 2 dígitos $\to$ $9 \times 9$ posibilidades (81),
+            \item[3.] 3 dígitos $\to$ $9 \times 9 \times 8$ posibilidades (648),
+            \item[4.] 4 dígitos $\to$ $9 \times 9 \times  8\times 7$ posibilidades (4536),
+            \item[5.] 5 dígitos $\to$ $9 \times 9 \times  8\times  7\times 6$ posibilidades (27216),
+        \end{enumerate} 
+        \vskip .2cm
+        \textbf{Total:} $9 +81+ 648+4536+27216 = 32490$.\qed
+    \end{frame}
+    
+        
+
+    \begin{frame}
+        
+        {\color{blue}Ejercicio}
+        \vskip .2cm
+        ¿De cuántas formas distintas se pueden escoger $5$  cartas de una baraja de $52$ cartas?
+            \begin{enumerate}
+                \item Si no hay restricciones.
+                \item Si debe haber tres picas y dos corazones.
+                \item Si debe haber al menos una carta de cada palo.
+                %\item (30 pts) Si de haber al menos $3$ picas.
+            \end{enumerate}
+            \vskip .2cm \pause
+            {\color{blue}Solución.}\pause
+            \vskip .3cm
+            (1)  Como no nos imponen ninguna condición especial entonces solo debemos determinar cuántos subconjuntos hay con $5$ elementos  de un conjunto de $52$ objetos, es decir, debemos hacer una \textbf{\textit{selección sin orden de 5 cartas entre 52 cartas}}, esto es:
+    \end{frame}
+        
+
+    \begin{frame}
+
+        \begin{align*}
+                \binom{52}{5} &= \frac{52!}{(52-5)!5!} = \frac{52!}{47!5!} = \frac{52\cdot51\cdot50\cdot49\cdot48\cdot{47!}}{{47!}5!}\\[0.3cm]
+                &= \frac{52\cdot51\cdot{50}\cdot49\cdot{48}}{{5}\cdot{4\cdot3\cdot2}}
+                = 52\cdot51\cdot49\cdot20.
+        \end{align*}
+        \vskip .2cm \pause
+        (2) En este caso, debemos elegir $3$ cartas entre $13$ (para las picas), y la cantidad de elecciones posibles es \ $\binom{13}{3}$.  
+        \vskip .2cm \pause
+        Por otro lado, para el palo de corazones, hay \ $\binom{13}{2}$ \ formas de elegir $2$ cartas entre $13$.  
+        \vskip .2cm \pause
+        Luego, por el principio de multiplicación, el resultado es:
+                    \begin{equation*}
+                    \binom{13}{3}\cdot\binom{13}{2} = \frac{13!}{10!3!}\cdot\frac{13!}{11!2!} = 
+                    \frac{13\cdot12\cdot11}{6}\cdot\frac{13\cdot{12}}{2} = 13^2\cdot12\cdot11.
+                    \end{equation*}
+
+    \end{frame}
+        
+
+    \begin{frame}
+        (3) Como debe haber al menos una carta de cada palo, y hay $4$ palos, entonces en cada elección de $5$ cartas \textbf{ineludiblemente tiene que haber dos del mismo palo}.  Ahora bien, si fijamos el palo que se repite, hay
+        $$\binom{13}{2}\cdot\binom{13}{1}\cdot\binom{13}{1}\cdot\binom{13}{1}$$
+        formas de elegir las 5 cartas.  Como hay 4 palos, tenemos un total de:
+        $$4\cdot\binom{13}{2}\cdot\binom{13}{1}\cdot\binom{13}{1}\cdot\binom{13}{1}=4\cdot13\cdot6\cdot13\cdot13\cdot13 = 24\cdot13^4.$$ \qed
+        
+    \end{frame}
+    
+    \begin{frame}
+        
+        {\color{blue}Ejercicio}
+        \vskip .2cm
+        ¿De cuántas formas diferentes pueden repartirse 5 bolas blancas, 3 rojas y
+        2 negras en 10 urnas distintas (etiquetadas) de forma que cada urna
+        contenga una bola? 
+        \vskip .2cm \pause
+        {\color{blue}Solución.}
+        \vskip .2cm
+        Observar que como hay 10  bolas y 10 urnas, cada urna debe contener una bola.
+        \vskip .2cm\pause
+        Primero nos preguntamos ¿de cuántas forma puedo poner las 5 bolas blancas en  las 10 urnas? 
+        \vskip .3cm\pause
+        Este problema es equivalente a elegir 5 urnas entre 10 (las urnas donde pondremos las bolas blancas) y sabemos que las posibilidades son $\binom{10}{5}$.
+        \vskip .3cm\pause
+        Ahora quedan 5 lugares y  queremos ver de cuántas formas ponemos 3 bolas rojas en 5 urnas y la respuesta es $\binom{5}{3}$ 
+        \vskip 1cm
+        
+    \end{frame}
+    
+    \begin{frame}
+        
+        Finalmente,  hay dos lugares para las dos bolas negras y hay una sola forma de ponerlas.\pause
+        \vskip .2cm
+        El resultado es entonces
+        
+        \begin{equation*}
+            \binom{10}{5}\binom{5}{3} = \frac{10!}{5!5!}\frac{5!}{2!3!} = \frac{10!}{5!2!3!} .
+        \end{equation*}\qed
+        
+        {\color{blue}Observación} Este problema es equivalente a ``cuantas permutaciones hay de 5 bolas  blancas, 3 rojas y 2 negras''.
+        \vskip .2cm\pause
+        Podemos pensar primero que toda las bolas tienen distinto color,  con lo cual tenemos $10!$ permutaciones.
+        \vskip .2cm\pause
+        Luego,  hay que dividir por las permutaciones de 2 bolas blancas, 3 rojas  y 2 negras, y el resultado es
 
         \begin{equation*}
-			\frac{10!}{5!2!3!} .
-		\end{equation*}
-		
-	\end{frame}
-	
-	
-	
-	
-	\begin{frame}
-		
-		
-		{\color{blue}Ejercicio}
-		\vskip .2cm
-		Un ascensor de un centro comercial parte del sótano con 5 pasajeros y se detiene en 7 pisos. 
-		¿De cuántas maneras distintas pueden descender los pasajeros? ¿Y con la condición de que dos 
-		pasajeros no bajen en el mismo piso?
-		\vskip .2cm \pause
-		{\color{blue}Solución.}\pause
-		\vskip .3cm
-		Hagamos un poco de  abstracción del problema y pensemos las  posibilidades que tiene 5 personas para ubicarse en 7 lugares: la primera persona tiene 7 posibilidades, la segunda también y así sucesivamente, luego el total de posibilidades es 
-		\begin{equation*}
-			7 \times 	7 \times 	7 \times 	7 \times 	7  = 7^5.
-		\end{equation*}
-		
-		
-		
-		\vskip 5cm
-		
-		
-	\end{frame}
-	
-	
-	\begin{frame}
-		
-		
-		Si  no estás convencido del razonamiento, lo podemos ver de la siguiente manera: supongamos  que tenemos 5 posiciones (que representan los 5 pasajeros) y  en cada posición podemos poner un número del 1 al 7 (el piso en que baja), entonces la pregunta se reduce a ¿cuántos números de 5 dígitos se pueden formar con los dígitos del 1 al 7?
-		\vskip .2cm \pause
-		Claramente, la respuesta es también $7^5$.
-		
-		\vskip 1cm\pause
-		
-		Para la segunda pregunta, simplemente hay que modificar la pregunta anterior ¿cuántos números de 5 dígitos con todos los dígitos diferentes se pueden formar con los dígitos del 1 al 7?
-		\vskip .2cm 
-		La respuesta es:
-		\begin{equation*}
-			7 \times 6 \times 5 \times 4 \times 3 = \frac{7!}{(7-5)!}=\frac{7!}{2!}.
-		\end{equation*}
-		\qed
-		
-	\end{frame}
-	
-	
+            \frac{10!}{5!2!3!} .
+        \end{equation*}
+        
+    \end{frame}
+    
+    
+    
+    
+    \begin{frame}
+        
+        
+        {\color{blue}Ejercicio}
+        \vskip .2cm
+        Un ascensor de un centro comercial parte del sótano con 5 pasajeros y se detiene en 7 pisos. 
+        ¿De cuántas maneras distintas pueden descender los pasajeros? ¿Y con la condición de que dos 
+        pasajeros no bajen en el mismo piso?
+        \vskip .2cm \pause
+        {\color{blue}Solución.}\pause
+        \vskip .3cm
+        Hagamos un poco de  abstracción del problema y pensemos las  posibilidades que tiene 5 personas para ubicarse en 7 lugares: la primera persona tiene 7 posibilidades, la segunda también y así sucesivamente, luego el total de posibilidades es 
+        \begin{equation*}
+            7 \times     7 \times     7 \times     7 \times     7  = 7^5.
+        \end{equation*}
+        
+        
+        
+        \vskip 5cm
+        
+        
+    \end{frame}
+    
+    
+    \begin{frame}
+        
+        
+        Si  no estás convencido del razonamiento, lo podemos ver de la siguiente manera: supongamos  que tenemos 5 posiciones (que representan los 5 pasajeros) y  en cada posición podemos poner un número del 1 al 7 (el piso en que baja), entonces la pregunta se reduce a ¿cuántos números de 5 dígitos se pueden formar con los dígitos del 1 al 7?
+        \vskip .2cm \pause
+        Claramente, la respuesta es también $7^5$.
+        
+        \vskip 1cm\pause
+        
+        Para la segunda pregunta, simplemente hay que modificar la pregunta anterior ¿cuántos números de 5 dígitos con todos los dígitos diferentes se pueden formar con los dígitos del 1 al 7?
+        \vskip .2cm 
+        La respuesta es:
+        \begin{equation*}
+            7 \times 6 \times 5 \times 4 \times 3 = \frac{7!}{(7-5)!}=\frac{7!}{2!}.
+        \end{equation*}
+        \qed
+        
+    \end{frame}
+    
+
+    \begin{frame}
+
+        {\color{blue}Ejercicio}
+        \vskip .2cm
+        Para participar en un torneo de tenis de dobles mixtos, es necesario presentar un equipo de 3 parejas, debiéndose elegir los jugadores entre los integrantes de un grupo constituido por 6 hombres y 3 mujeres. 
+        \vskip .2cm
+        ¿De cuántas maneras puede seleccionarse el equipo?
+
+        \vskip .2cm \pause
+        {\color{blue}Solución.}\pause
+        \vskip .3cm
+        1) Nos piden que armemos $3$ parejas, sin que importe el orden de las parejas.
+
+        \vskip .2cm \pause
+
+        2) Observar \textbf{todas} las mujeres deben formar parte del equipo, ya que requerimos de 3 mujeres para formar las 3 parejas. De donde, el problema lo podemos replantear como: 
+        \vskip .2cm 
+        \textbf{¿De cuántas maneras le podemos asignar un compañero (hombre) de juego a cada mujer?}
+
+        
+        
+
+    \end{frame}
+        
+
+    \begin{frame}
+        3) Para resolver esto, representamos al problema en un esquema de la siguiente manera:  Por comodidad, y sin perdida de generalidad, digamos que las mujeres las numeramos 1, 2 y 3. Entonces asignarle un compañero a cada una equivale a completar las siguientes casillas
+        \begin{center}
+        \underline{1} \, $\llcorner\lrcorner$ \qquad \underline{2} \, $\llcorner\lrcorner$ \qquad \underline{2} \, $\llcorner\lrcorner$
+        \end{center}
+        \vskip .2cm \pause
+        \begin{itemize}
+            \item 1º casilla: $6$ posibilidades (los 6 hombres).
+            \item 2º casilla: $5$ posibilidades (5 hombres).
+            \item 3º casilla: $4$ posibilidades (4 hombres).
+        \end{itemize}
+        \vskip .2cm \pause
+        Así, por el principio de multiplicación, las maneras de seleccionar al equipo son: $$6\cdot5\cdot4 = 120.$$
+        \qed
+        
+    \end{frame}
+
+
+    \begin{frame}
+
+        {\color{blue}Ejercicio}
+        \vskip .2cm
+        Tenemos tres cajas numeradas y 10  bolitas indistinguibles ¿De cuántas formas puedo distribuir las bolitas en las cajas?
+
+        \vskip .2cm \pause
+        {\color{blue}Solución.}\pause
+        \vskip .3cm
+        
+        1) Pensemos en el problema equivalente: tengo 10 bolitas alineadas,  ¿de cuántas maneras puedo poner dos paredes que separen las bolitas en tres grupos?
+        
+        \vskip .2cm \pause
+        2) Ahora bien, si pensamos que las bolitas son 0's y las paredes son 1's, entonces el problema se reduce a: ¿cuántas permutaciones hay de la palabra?
+        $$
+        1\,1\,0\,0\,0\,0\,0\,0\,0\,0\,0\,0
+        $$
+
+    \end{frame}
+
+    \begin{frame}
+
+        3) Lo resolvemos como siempre: primero consideramos que todos los caracteres son distintos y obtenemos $12!$ permutaciones, luego dividimos por $10!$ y $2!$ para eliminar las permutaciones de 0's seguidos y de 1's seguidos, respectivamente.
+        Luego  el resultado es 
+        $$
+        \frac{12!}{10!2!} = \frac{12 \cdot 11 \cdot 10!}{10! 2} = \frac{12 \cdot 11 }{2} = 66.
+        $$
+        \qed
+
+            \vskip .2cm
+        {\color{blue}Ejercicio}
+        \vskip .2cm
+        Tenemos $m$ cajas numeradas y $n$  bolitas indistinguibles. Probar que hay 
+        $$\binom{m+n-1}{m-1}$$
+        formas de distribuir las bolitas en las cajas.
+
+        \vskip .3cm\pause
+
+        \textit{(Selecciones no ordenadas con repetición)}
+    
+
+    \end{frame}
+    
 \end{document}
 
