--- a/2023-1/beamer/C10_md1.tex
+++ b/2023-1/beamer/C10_md1.tex
@@ -1,7 +1,7 @@
-%\documentclass{beamer} 
-\documentclass[handout]{beamer} % sin pausas
+\documentclass{beamer} 
+%\documentclass[handout]{beamer} % sin pausas
 \usetheme{CambridgeUS}
-%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
+\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
 \usepackage{etex}
 \usepackage{t1enc}
@@ -363,7 +363,7 @@ Por el axioma de cancelación (cancelando $b$) obtenemos que $1 = q'q \Rightarro
 \begin{frame}\frametitle{Ejercicios}
         {\color{blue}Ejercicio.}
         \vskip .3cm 
-           Mostrar que $4^n -1$ es divisible por 3 para todo $n \in \mathbb{N}$.
+        Mostrar que $4^n -1$ es divisible por 3 para todo $n \in \mathbb{N}$.
     \pause\vskip .3cm 
     
     {\color{blue}Solución. } 
@@ -376,10 +376,6 @@ Por el axioma de cancelación (cancelando $b$) obtenemos que $1 = q'q \Rightarro
     \vskip .3cm 
     Paso  inductivo.  Debemos probar que  $3 | 4^k -1$ para $k \ge 1$ (HI) entonces, se deduce que $3 | 4^{k+1} -1$.
     \vskip .3cm
-    Ahora bien,
-    \begin{equation*}
-        4^{k+1} -1 = 4 \cdot 4^k - 1 = 3 \cdot 4^k + (4^k -1).
-    \end{equation*} 
 \end{frame}
 
 
