--- a/2023-1/beamer/C13_md1.tex
+++ b/2023-1/beamer/C13_md1.tex
@@ -1,7 +1,7 @@
-%\documentclass{beamer} 
-\documentclass[handout]{beamer} % sin pausas
+\documentclass{beamer} 
+%\documentclass[handout]{beamer} % sin pausas
 \usetheme{CambridgeUS}
-%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
+\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
 \usepackage{etex}
 \usepackage{t1enc}
@@ -94,7 +94,7 @@
 
 
 
-\title[Clase 13 - Factorización prima]{Matemática Discreta I \\ Clase 13 - Factorización prima 1}
+\title[Clase 13 - Factorización prima]{Matemática Discreta I \\ Clase 13 - Factorización prima (1° parte)}
 %\author[C. Olmos / A. Tiraboschi]{Carlos Olmos / Alejandro Tiraboschi}
 \institute[]{\normalsize FAMAF / UNC
     \\[\baselineskip] ${}^{}$
